hovers en botones

--- a/Nivell-2.html
+++ b/Nivell-2.html
@@ -10,7 +10,7 @@
 	<body>
 		<main class="bg-secondary carcasa mt-3 p-3">
 			<h2>CASIO</h2>
-			<div class="mb-3 ml-1 mr-1  pantallaLCD row">
+			<div class="mb-3 ml-1 mr-1 pantallaLCD row">
 				<div id="LCD" class="align-items-center col-12 d-flex justify-content-end ml-auto mr-auto">
 					<p id="resultado">0</p>
 				</div>
@@ -22,19 +22,24 @@
 					<div id="tres" class="botonCalcu"
 					onclick="teclaTres()">3</div>
 					<!-- Tecla suma -->
-					<div id="mes" class="bg-info botonCalcu text-white" onclick="teclaMas()">&#43;</div>
+					<div id="mes" class="botonOp botonCalcu text-white" onclick="teclaMas()">&#43;</div>
 					<div id="quatre" class="botonCalcu" onclick="teclaCuatro()">4</div>
 					<div id="cinq" class="botonCalcu" onclick="teclaCinco()">5</div>
 					<div id="sis" class="botonCalcu" onclick="teclaSeis()">6</div>
-					<div id="menys" class="bg-info botonCalcu text-white" onclick="teclaMenos()">&#8722;</div>
+					<!-- Tecla resta -->
+					<div id="menys" class="botonOp botonCalcu text-white" onclick="teclaMenos()">&#8722;</div>
 					<div id="set" class="botonCalcu" onclick="teclaSiete()">7</div>
 					<div id="vuit" class="botonCalcu" onclick="teclaOcho()">8</div>
 					<div id="nou" class="botonCalcu" onclick="teclaNueve()">9</div>
-					<div id="per" class="bg-info botonCalcu text-white" onclick="teclaPor()">&#215;</div>
-					<div id="ce" class="bg-danger botonCalcu text-white" onclick="teclaCe()">C</div>
+					<!-- Tecla multip -->
+					<div id="per" class="botonOp botonCalcu text-white" onclick="teclaPor()">&#215;</div>
+					<!-- Tecla reset -->
+					<div id="ce" class="botonRojo botonCalcu text-white" onclick="teclaCe()">C</div>
 					<div id="zero" class="botonCalcu" onclick="teclaCero()">0</div>
-					<div id="igual" class="bg-warning botonCalcu text-white" onclick="teclaIgual()">&#61;</div>
-					<div id="entre" class="bg-info botonCalcu text-white" onclick="teclaEntre()">&#247;</div>
+					<!-- Tecla igual -->
+					<div id="igual" class="botonResult botonCalcu text-white" onclick="teclaIgual()">&#61;</div>
+					<!-- Tecla division -->
+					<div id="entre" class="botonOp botonCalcu text-white" onclick="teclaEntre()">&#247;</div>
 				</div>
 			</div>
 		</main>
