Cambios en colores

--- a/Nivell-2.html
+++ b/Nivell-2.html
@@ -15,7 +15,7 @@
 					<p id="resultado">0</p>
 				</div>
 			</div>
-			<div class="row" data-pg-collapsed>
+			<div class="row">
 				<div class="col-12 container d-flex flex-wrap justify-content-around">
 					<div id="un" class="botonCalcu" onclick="teclaUno()">1</div>
 					<div id="dos" class="botonCalcu" onclick="teclaDos()">2</div>
